# sylpheedish

./: .gitignore  COPYING  Changelog  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  sylpheedish.desktop  sylpheedish.pc.in
po/: Makefile.in.in  Makevars  bg.po  ca.po  cs.po  de.po  en_GB.po  eo.po  es.po  fi.po  fr.po  he.po  hu.po  id_ID.po  it.po  ja.po  lt.po  nb.po  nl.po  pl.po  pt_BR.po  pt_PT.po  ru.po  sk.po  sv.po  uk.po  zh_CN.po  zh_TW.po
src/: Makefile.am  account.c  action.c  addr_compl.c  addrbook.c  addrcustomattr.c  addrduplicates.c  addressadd.c  addressbook-dbus.c  addressbook.c  addressbook_foldersel.c  addrgather.c  addrharvest.c  addrindex.c  advsearch.c  alertpanel.c  autofaces.c  avatars.c  browseldap.c  codeconv.c  codeconv.h  compose.c  crash.c  customheader.c  displayheader.c  editaddress.c  editaddress_other_attributes_ldap.c  editbook.c  editgroup.c  editjpilot.c  editldap.c  editldap_basedn.c  edittags.c  editvcard.c  exphtmldlg.c  expldifdlg.c  export.c  exporthtml.c  exportldif.c  file_checker.c  (+103 more)
src/common/: Makefile.am  claws.c  defs.h  hooks.c  log.c  log.h  plugin.c  plugin.h  prefs.c  session.c  session.h  smtp.c  smtp.h  socket.c  socket.h  ssl.c  ssl.h  ssl_certificate.c  ssl_certificate.h  string_match.c  sylpheedish.c  sylpheedish.h  tags.c  template.c  timing.h  utils.c  utils.h  xml.c
src/etpan/: Makefile.am  etpan-ssl.c  etpan-ssl.h  etpan-thread-manager.c  imap-thread.c  nntp-thread.c
src/gtk/: Makefile.am  about.c  combobox.c  description_window.c  filesel.c  gtkaspell.c  gtkaspell.h  gtkcmclist.c  gtkcmctree.c  gtkcmoptionmenu.c  gtksctree.c  gtkshruler.c  gtkunit.c  gtkutils.c  gtkutils.h  gtkvscrollbutton.c  icon_legend.c  inputdialog.c  logwindow.c  menu.c  pluginwindow.c  pluginwindow.h  prefswindow.c  progressdialog.c  quicksearch.c  spell_entry.c  spell_entry.h  sslcertwindow.c  sslcertwindow.h
src/pixmaps/: sylpheedish.xpm  sylpheedish_compose_logo.xpm  sylpheedish_icon.xpm  sylpheedish_logo-small.xpm  sylpheedish_logo.xpm
src/plugins/acpi_notifier/: acpi_notifier.c
src/plugins/address_keeper/: Makefile.am  address_keeper.c  address_keeper.h  address_keeper_prefs.c
src/plugins/archive/: archiver.c  archiver_gtk.c  archiver_prefs.c  libarchive_archive.c
src/plugins/att_remover/: Makefile.am  att_remover.c
src/plugins/attachwarner/: Makefile.am  attachwarner.c  attachwarner.h  attachwarner_prefs.c
src/plugins/bogofilter/: bogofilter.c  bogofilter_gtk.c
src/plugins/bsfilter/: Makefile.am  bsfilter.c  bsfilter_gtk.c
src/plugins/clamd/: clamav_plugin.c  clamav_plugin_gtk.c
src/plugins/clamd/libclamd/: clamd-plugin.c
src/plugins/demo/: demo.c
src/plugins/fancy/: Makefile.am  fancy_prefs.c  fancy_viewer.c  fancy_viewer.h
src/plugins/fetchinfo/: Makefile.am  fetchinfo_plugin.c  fetchinfo_plugin_gtk.c
src/plugins/gdata/: cm_gdata_contacts.c  cm_gdata_prefs.c  gdata_plugin.c
src/plugins/geolocation/: geolocation_plugin.c
src/plugins/libravatar/: Makefile.am  libravatar.c  libravatar.h  libravatar_prefs.c
src/plugins/mailmbox/: Makefile.am  mailmbox_folder.c  plugin.c  plugin_gtk.c
src/plugins/newmail/: newmail.c
src/plugins/notification/: Makefile.am  notification_banner.c  notification_banner.h  notification_command.c  notification_command.h  notification_core.c  notification_foldercheck.c  notification_foldercheck.h  notification_hotkeys.c  notification_hotkeys.h  notification_indicator.c  notification_indicator.h  notification_lcdproc.c  notification_lcdproc.h  notification_plugin.c  notification_plugin.h  notification_popup.c  notification_popup.h  notification_prefs.c  notification_prefs.h  notification_trayicon.c  notification_trayicon.h
src/plugins/pdf_viewer/: poppler_viewer.c
src/plugins/perl/: perl_gtk.c  perl_plugin.c
src/plugins/pgpcore/: Makefile.am  autocompletion.c  pgp_utils.c  pgp_utils.h  pgp_viewer.c  plugin.c  prefs_gpg.c  sgpgme.c
src/plugins/pgpinline/: Makefile.am  pgpinline.c  plugin.c
src/plugins/pgpmime/: Makefile.am  pgpmime.c  plugin.c
src/plugins/python/: accounttype.c  clawsmailmodule.c  composewindowtype.c  folderpropertiestype.c  foldertype.c  mailboxtype.c  messageinfotype.c  nodetype.c  python-hooks.c  python_plugin.c
src/plugins/rssyl/: Makefile.am  parse822.c  plugin.c  rssyl_update_feed.c
src/plugins/smime/: Makefile.am  plugin.c  smime.c
src/plugins/spam_report/: Makefile.am  spam_report.c  spam_report_prefs.c
src/plugins/spamassassin/: libspamc.c  spamassassin.c  spamassassin_gtk.c
src/plugins/tnef_parse/: Makefile.am  tnef_dump.c  tnef_parse.c  ytnef.c
src/plugins/vcalendar/: Makefile.am  common-views.c  day-view.c  icaltime_as_local.c  month-view.c  plugin.c  vcal_dbus.c  vcal_folder.c  vcal_manager.c  vcal_meeting_gtk.c  vcal_prefs.c  vcalendar.c
src/plugins/vcalendar/libical/libical/: Makefile.am
tools/: Makefile.am
